force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__ApplicantPhoneType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantPhoneType__c</fullName>
    <label>Applicant Phone Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantPhoneType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>