force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__ApplicantRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantRole__c</fullName>
    <label>Applicant Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>