force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__ApplicantStage__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantStage__c</fullName>
    <label>Applicant Stage</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantStage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>