force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>