force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__PrefixText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrefixText__c</fullName>
    <label>Prefix</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrefixText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>