force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__SuffixText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SuffixText__c</fullName>
    <label>Suffix</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SuffixText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>