force-app/main/default/objects/ssot__Applicant__dlm/fields/ssot__UniqueReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueReferenceNumber__c</fullName>
    <label>Unique Reference Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueReferenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>